yiltc-go-backup/testsuite/negative/power_operator.yilt
// Negative: power operator `**` is not supported.
fn main()
    let x = 2 ** 10
    print(x)
